--- a/app/index.html
+++ b/app/index.html
@@ -1,28 +1,27 @@
-<!doctype html>
-<html lang="en" ng-app="myApp">
-<head>
-  <meta charset="utf-8">
-  <title>My AngularJS App</title>
-  <link rel="stylesheet" href="css/app.css"/>
-</head>
-<body>
-  <ul class="menu">
-    <li><a href="#/view1">view1</a></li>
-    <li><a href="#/view2">view2</a></li>
-  </ul>
-
-  <div ng-view></div>
-
-  <div>Angular seed app: v<span app-version></span></div>
-
-  <!-- In production use:
-  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.4/angular.min.js"></script>
-  -->
-  <script src="lib/angular/angular.js"></script>
-  <script src="js/app.js"></script>
-  <script src="js/services.js"></script>
-  <script src="js/controllers.js"></script>
-  <script src="js/filters.js"></script>
-  <script src="js/directives.js"></script>
-</body>
+<!DOCTYPE html>
+<html lang=en ng-app=mathSkills>
+    <head>
+        <meta charset=utf-8>
+        <title>MathSkills | SRJC</title>
+        <link rel=stylesheet href=css/bootstrap.min.css>
+        <link rel=stylesheet href=css/app.css>
+    </head>
+    <body>
+        <header>
+            <div>
+                <h1>Math Skills</h1>
+                <span>&copy; 2013 Santa Rosa Junior College</span>
+            </div>
+        </header>
+        <div>
+            <div ng-view></div>
+        </div>
+        
+        <script src=//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js></script>
+        <script src=lib/angular/angular.js></script>
+        <script src=js/mathSkills.js></script>
+        <script src=js/services/mathSkills.services.js></script>
+        <script src=js/services/coursedata.js></script>
+        <script src=js/controllers/unitList.js></script>
+    </body>
 </html>
