--- a/app/index.html
+++ b/app/index.html
@@ -27,5 +27,6 @@
         <script src=js/controllers/unitList.js></script>
         <script src=js/controllers/problemSetList.js></script>
         <script src=js/controllers/problem.js></script>
+        <script src=js/directives/ms-problem-pager.js></script>
     </body>
 </html>
