--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,7 @@
             </div>
         </header>
         <div class=container>
+            <ms-breadcrumbs></ms-breadcrumbs>
             <div ng-view></div>
         </div>
         <script src=//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js></script>
@@ -27,6 +28,7 @@
         <script src=js/controllers/unitList.js></script>
         <script src=js/controllers/problemSetList.js></script>
         <script src=js/controllers/problem.js></script>
+        <script src=js/directives/ms-breadcrumbs.js></script>
         <script src=js/directives/ms-problem-pager.js></script>
     </body>
 </html>
