--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
             <div class="navbar navbar-inverse">
                 <div class=navbar-inner>
                     <a class=brand href=#>Math Skills</a>
-                    <p class=navbar-text>&copy; 2013 Santa Rosa Junior College</p>
+                    <p class="navbar-text pull-right">&copy; 2013 Santa Rosa Junior College</p>
                 </div>
             </div>
         </header>
