--- a/app/index.html
+++ b/app/index.html
@@ -30,5 +30,8 @@
         <script src=js/controllers/problem.js></script>
         <script src=js/directives/ms-breadcrumbs.js></script>
         <script src=js/directives/ms-problem-pager.js></script>
+        <script src=js/directives/ms-problem.js></script>
+        <script src=js/directives/ms-panel-group.js></script>
+        <script src=js/directives/ms-panel.js></script>
     </body>
 </html>
