Fully functional problem set and workbook.

--- a/app/index.html
+++ b/app/index.html
@@ -22,16 +22,26 @@
         </div>
         <script src=//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js></script>
         <script src=lib/angular/angular.js></script>
+        <script src=lib/bootstrap/bootstrap.min.js></script>
         <script src=js/mathSkills.js></script>
         <script src=js/services/mathSkills.services.js></script>
-        <script src=js/services/coursedata.js></script>
-        <script src=js/controllers/unitList.js></script>
-        <script src=js/controllers/problemSetList.js></script>
+        <script src=js/services/course-data.js></script>
+        <script src=js/services/directive-utils.js></script>
+        <script src=js/services/parser.js></script>
+        <script src=js/controllers/unit-list.js></script>
+        <script src=js/controllers/problem-set-list.js></script>
         <script src=js/controllers/problem.js></script>
         <script src=js/directives/ms-breadcrumbs.js></script>
         <script src=js/directives/ms-problem-pager.js></script>
         <script src=js/directives/ms-problem.js></script>
         <script src=js/directives/ms-panel-group.js></script>
         <script src=js/directives/ms-panel.js></script>
+        <script src=js/directives/ms-controls.js></script>
+        <script src=js/directives/ms-expression.js></script>
+        <script src=js/directives/ms-mixed-number.js></script>
+        <script src=js/directives/ms-fraction.js></script>
+        <script src=js/directives/ms-event-label.js></script>
+        <script src=js/directives/ms-string.js></script>
+        <script src=js/directives/ms-input.js></script>
     </body>
 </html>
