1-1 directives ms-select.js and ms-wholeplace.js, add html bind to ms-expression.js

--- a/app/index.html
+++ b/app/index.html
@@ -43,5 +43,7 @@
         <script src=js/directives/ms-event-label.js></script>
         <script src=js/directives/ms-string.js></script>
         <script src=js/directives/ms-input.js></script>
+        <script src=js/directives/ms-select.js></script>
+        <script src=js/directives/ms-wholeplace.js></script>
     </body>
 </html>
