--- a/app/index.html
+++ b/app/index.html
@@ -26,11 +26,13 @@
         <script src=js/mathSkills.js></script>
         <script src=js/services/mathSkills.services.js></script>
         <script src=js/services/course-data.js></script>
+        <script src=js/services/feedback-data.js></script>
         <script src=js/services/directive-utils.js></script>
         <script src=js/services/parser.js></script>
         <script src=js/controllers/unit-list.js></script>
         <script src=js/controllers/problem-set-list.js></script>
         <script src=js/controllers/problem.js></script>
+        <script src=js/controllers/feedback.js></script>
         <script src=js/directives/ms-breadcrumbs.js></script>
         <script src=js/directives/ms-problem-pager.js></script>
         <script src=js/directives/ms-problem.js></script>
