--- a/app/index.html
+++ b/app/index.html
@@ -38,6 +38,7 @@
         <script src=js/directives/ms-problem.js></script>
         <script src=js/directives/ms-panel-group.js></script>
         <script src=js/directives/ms-panel.js></script>
+        <script src=js/directives/ms-feedback.js></script>
         <script src=js/directives/ms-controls.js></script>
         <script src=js/directives/ms-expression.js></script>
         <script src=js/directives/ms-mixed-number.js></script>
