--- a/app/index.html
+++ b/app/index.html
@@ -49,6 +49,7 @@
         <script src=js/directives/ms-input.js></script>
         <script src=js/directives/ms-select.js></script>
         <script src=js/directives/ms-wholeplace.js></script>
+        <script src=js/directives/ms-addwholes.js></script>
         <script src=js/filters/input2str.js></script>
     </body>
 </html>
