added button (\but{label/answer}{T/F}) working still needs some work and cleanup

--- a/app/index.html
+++ b/app/index.html
@@ -50,6 +50,7 @@
         <script src=js/directives/ms-select.js></script>
         <script src=js/directives/ms-wholeplace.js></script>
         <script src=js/directives/ms-addwholes.js></script>
+        <script src=js/directives/ms-button.js></script>
         <script src=js/filters/input2str.js></script>
     </body>
 </html>
