--- a/app/index.html
+++ b/app/index.html
@@ -51,6 +51,7 @@
         <script src=js/directives/ms-wholeplace.js></script>
         <script src=js/directives/ms-addwholes.js></script>
         <script src=js/directives/ms-button.js></script>
+        <script src=js/directives/ms-row.js></script>
         <script src=js/filters/input2str.js></script>
     </body>
 </html>
