Add <ms-checkbox-group> and full test suite.

--- a/app/index.html
+++ b/app/index.html
@@ -35,6 +35,7 @@
         <script src=js/controllers/feedback.js></script>
         <script src=js/directives/ms-breadcrumbs.js></script>
         <script src=js/directives/ms-checkbox.js></script>
+        <script src=js/directives/ms-checkbox-group.js></script>
         <script src=js/directives/ms-problem-pager.js></script>
         <script src=js/directives/ms-problem.js></script>
         <script src=js/directives/ms-panel-group.js></script>
