--- a/app/index.html
+++ b/app/index.html
@@ -55,6 +55,7 @@
         <script src=js/directives/ms-button.js></script>
         <script src=js/directives/ms-row-group.js></script>
         <script src=js/directives/ms-row.js></script>
+        <script src=js/directives/ms-subtractwholes.js></script>
         <script src=js/filters/input2str.js></script>
     </body>
 </html>
