--- a/app/index.html
+++ b/app/index.html
@@ -57,5 +57,6 @@
         <script src=js/directives/ms-row.js></script>
         <script src=js/directives/ms-subtractwholes.js></script>
         <script src=js/filters/input2str.js></script>
+        <script src=js/filters/button2str.js></script>
     </body>
 </html>
