Add <ms-exponent> directive without any tests.

--- a/app/index.html
+++ b/app/index.html
@@ -41,6 +41,7 @@
         <script src=js/directives/ms-panel-group.js></script>
         <script src=js/directives/ms-panel.js></script>
         <script src=js/directives/ms-help-prompt.js></script>
+        <script src=js/directives/ms-exponent.js></script>
         <script src=js/directives/ms-feedback.js></script>
         <script src=js/directives/ms-controls.js></script>
         <script src=js/directives/ms-expression.js></script>
