start 3.1 multiply wholes

--- a/app/index.html
+++ b/app/index.html
@@ -54,6 +54,7 @@
         <script src=js/directives/ms-select.js></script>
         <script src=js/directives/ms-wholeplace.js></script>
         <script src=js/directives/ms-addwholes.js></script>
+        <script src=js/directives/ms-multiplywholes.js></script>
         <script src=js/directives/ms-button.js></script>
         <script src=js/directives/ms-row-group.js></script>
         <script src=js/directives/ms-row.js></script>
