added ms-html (\html{<div>some text<br><br>more text</div>})

--- a/app/index.html
+++ b/app/index.html
@@ -37,6 +37,7 @@
         <script src=js/directives/ms-checkbox.js></script>
         <script src=js/directives/ms-comparewholesgraph.js></script>
         <script src=js/directives/ms-group.js></script>
+        <script src=js/directives/ms-html.js></script>
         <script src=js/directives/ms-problem-pager.js></script>
         <script src=js/directives/ms-problem.js></script>
         <script src=js/directives/ms-panel-group.js></script>
