added ms-css (\css{\str{some-text}}{class}}) use to create css 'scope' (.class ms-string {color:red;})

--- a/app/index.html
+++ b/app/index.html
@@ -35,6 +35,7 @@
         <script src=js/controllers/feedback.js></script>
         <script src=js/directives/ms-breadcrumbs.js></script>
         <script src=js/directives/ms-checkbox.js></script>
+        <script src=js/directives/ms-css.js></script>
         <script src=js/directives/ms-comparewholesgraph.js></script>
         <script src=js/directives/ms-group.js></script>
         <script src=js/directives/ms-html.js></script>
