--- a/app/index.html
+++ b/app/index.html
@@ -62,6 +62,7 @@
         <script src=js/directives/ms-row-group.js></script>
         <script src=js/directives/ms-row.js></script>
         <script src=js/directives/ms-subtractwholes.js></script>
+        <script src=js/directives/ms-chart.js></script>
         <script src=js/filters/input2str.js></script>
         <script src=js/filters/button2str.js></script>
     </body>
