added ms-checkboxlabel directive and checkbox2lbl filter- for feedback page

--- a/app/index.html
+++ b/app/index.html
@@ -35,6 +35,7 @@
         <script src=js/controllers/feedback.js></script>
         <script src=js/directives/ms-breadcrumbs.js></script>
         <script src=js/directives/ms-checkbox.js></script>
+        <script src=js/directives/ms-checkboxlabel.js></script>
         <script src=js/directives/ms-css.js></script>
         <script src=js/directives/ms-comparewholesgraph.js></script>
         <script src=js/directives/ms-div-wholes.js></script>
@@ -65,5 +66,6 @@
         <script src=js/directives/ms-chart.js></script>
         <script src=js/filters/input2str.js></script>
         <script src=js/filters/button2str.js></script>
+        <script src=js/filters/checkbox2lbl.js></script>
     </body>
 </html>
