Add general replace filter for input2str and select2str.

--- a/app/index.html
+++ b/app/index.html
@@ -64,8 +64,7 @@
         <script src=js/directives/ms-row.js></script>
         <script src=js/directives/ms-subtractwholes.js></script>
         <script src=js/directives/ms-chart.js></script>
-        <script src=js/filters/input2str.js></script>
-        <script src=js/filters/button2str.js></script>
         <script src=js/filters/checkbox2lbl.js></script>
+        <script src=js/filters/replace.js></script>
     </body>
 </html>
