--- a/app/index.html
+++ b/app/index.html
@@ -34,6 +34,7 @@
         <script src=js/controllers/problem.js></script>
         <script src=js/controllers/feedback.js></script>
         <script src=js/directives/ms-breadcrumbs.js></script>
+        <script src=js/directives/ms-button-group.js></script>
         <script src=js/directives/ms-checkbox.js></script>
         <script src=js/directives/ms-checkboxlabel.js></script>
         <script src=js/directives/ms-css.js></script>
