2A.2 problem 10 graph, added flot folder to library with beta version of flot and categories js to allow x-axis labeling

--- a/app/index.html
+++ b/app/index.html
@@ -23,6 +23,8 @@
         <script src=//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js></script>
         <script src=lib/angular/angular.js></script>
         <script src=lib/bootstrap/bootstrap.min.js></script>
+        <script src=lib/flot/jquery.flot_beta.js></script>
+        <script src=lib/flot/jquery.flot.categories.js></script>
         <script src=js/mathSkills.js></script>
         <script src=js/services/mathSkills.services.js></script>
         <script src=js/services/course-data.js></script>
@@ -65,6 +67,7 @@
         <script src=js/directives/ms-row.js></script>
         <script src=js/directives/ms-subtractwholes.js></script>
         <script src=js/directives/ms-chart.js></script>
+        <script src=js/directives/ms-graph.js></script>
         <script src=js/filters/checkbox2lbl.js></script>
         <script src=js/filters/replace.js></script>
     </body>
