--- a/app/index.html
+++ b/app/index.html
@@ -68,6 +68,7 @@
         <script src=js/directives/ms-subtractwholes.js></script>
         <script src=js/directives/ms-chart.js></script>
         <script src=js/directives/ms-graph.js></script>
+        <script src=js/directives/ms-showplace.js></script>
         <script src=js/filters/checkbox2lbl.js></script>
         <script src=js/filters/replace.js></script>
     </body>
