--- a/app/index.html
+++ b/app/index.html
@@ -49,6 +49,7 @@
         <script src=js/directives/ms-panel-group.js></script>
         <script src=js/directives/ms-panel.js></script>
         <script src=js/directives/ms-help-prompt.js></script>
+        <script src=js/directives/ms-long-division.js></script>
         <script src=js/directives/ms-exponent.js></script>
         <script src=js/directives/ms-feedback.js></script>
         <script src=js/directives/ms-controls.js></script>
@@ -70,6 +71,9 @@
         <script src=js/directives/ms-graph.js></script>
         <script src=js/directives/ms-showplace.js></script>
         <script src=js/filters/checkbox2lbl.js></script>
+        <script src=js/filters/digits.js></script>
+        <script src=js/filters/hide-last.js></script>
         <script src=js/filters/replace.js></script>
+        <script src=js/filters/wrap.js></script>
     </body>
 </html>
