2A.2 problem 16 horizontal graph, partially implemented

--- a/app/index.html
+++ b/app/index.html
@@ -70,6 +70,7 @@
         <script src=js/directives/ms-chart.js></script>
         <script src=js/directives/ms-graph.js></script>
         <script src=js/directives/ms-showplace.js></script>
+        <script src=js/directives/ms-graph-horizontal.js></script>
         <script src=js/filters/checkbox2lbl.js></script>
         <script src=js/filters/digits.js></script>
         <script src=js/filters/hide-last.js></script>
