Add complete <ms-prime-factorization> with partial test suite.

--- a/app/index.html
+++ b/app/index.html
@@ -30,6 +30,7 @@
         <script src=js/services/course-data.js></script>
         <script src=js/services/feedback-data.js></script>
         <script src=js/services/directive-utils.js></script>
+        <script src=js/services/number-utils.js></script>
         <script src=js/services/parser.js></script>
         <script src=js/controllers/unit-list.js></script>
         <script src=js/controllers/problem-set-list.js></script>
@@ -67,6 +68,7 @@
         <script src=js/directives/ms-row-group.js></script>
         <script src=js/directives/ms-row.js></script>
         <script src=js/directives/ms-subtractwholes.js></script>
+        <script src=js/directives/ms-prime-factorization.js></script>
         <script src=js/directives/ms-chart.js></script>
         <script src=js/directives/ms-graph.js></script>
         <script src=js/directives/ms-showplace.js></script>
