Decimals 3.1, plus localized index file reference to Jquery 1.9.1

--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,7 @@
             <ms-breadcrumbs></ms-breadcrumbs>
             <div ng-view></div>
         </div>
-        <script src=//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js></script>
+        <script src=lib/jquery/jquery.1.9.1.min.js></script>
         <script src=lib/angular/angular.js></script>
         <script src=lib/bootstrap/bootstrap.min.js></script>
         <script src=lib/flot/jquery.flot_beta.js></script>
@@ -71,6 +71,7 @@
         <script src=js/directives/ms-chart.js></script>
         <script src=js/directives/ms-graph.js></script>
         <script src=js/directives/ms-showplace.js></script>
+        <script src=js/directives/ms-showplacedecimal.js></script>
         <script src=js/directives/ms-graph-horizontal.js></script>
         <script src=js/directives/ms-placevalue.js></script>
         <script src=js/filters/checkbox2lbl.js></script>
