--- a/app/index.html
+++ b/app/index.html
@@ -32,6 +32,7 @@
         <script src=js/services/directive-utils.js></script>
         <script src=js/services/number-utils.js></script>
         <script src=js/services/parser.js></script>
+        <script src=js/controllers/home.js></script>
         <script src=js/controllers/unit-list.js></script>
         <script src=js/controllers/problem-set-list.js></script>
         <script src=js/controllers/problem.js></script>
