update flot from 8.0 beta to 8.1 alpha, bring in the full github repository for flot

--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,7 @@
         <script src=lib/jquery/jquery.1.9.1.min.js></script>
         <script src=lib/angular/angular.js></script>
         <script src=lib/bootstrap/bootstrap.min.js></script>
-        <script src=lib/flot/jquery.flot_beta.js></script>
+        <script src=lib/flot/jquery.flot.js></script>
         <script src=lib/flot/jquery.flot.categories.js></script>
         <script src=js/mathSkills.js></script>
         <script src=js/services/mathSkills.services.js></script>
