--- a/app/index.html
+++ b/app/index.html
@@ -76,7 +76,10 @@
         <script src=js/directives/ms-showplacedecimal.js></script>
         <script src=js/directives/ms-graph-horizontal.js></script>
         <script src=js/directives/ms-placevalue.js></script>
+        <script src=js/filters/add-wholes.js></script>
+        <script src=js/filters/add-decimals.js></script>
         <script src=js/filters/checkbox2lbl.js></script>
+ 		<script src=js/filters/decimal-to-display-array.js></script>
         <script src=js/filters/digits.js></script>
         <script src=js/filters/hide-last.js></script>
         <script src=js/filters/replace.js></script>
