Add panelGroupData service with empty tests.

--- a/app/index.html
+++ b/app/index.html
@@ -31,6 +31,7 @@
         <script src=js/services/feedback-data.js></script>
         <script src=js/services/directive-utils.js></script>
         <script src=js/services/number-utils.js></script>
+        <script src=js/services/panel-group-data.js></script>
         <script src=js/services/parser.js></script>
         <script src=js/controllers/home.js></script>
         <script src=js/controllers/unit-list.js></script>
