start on multiply-decimals directive

--- a/app/index.html
+++ b/app/index.html
@@ -68,6 +68,7 @@
         <script src=js/directives/ms-multiply-wholes.js></script>
         <script src=js/directives/ms-add-decimals.js></script>
         <script src=js/directives/ms-subtract-decimals.js></script>
+        <script src=js/directives/ms-multiply-decimals.js></script>
         <script src=js/directives/ms-button.js></script>
         <script src=js/directives/ms-row-group.js></script>
         <script src=js/directives/ms-row.js></script>
