start ms-reduce-fraction directive

--- a/app/index.html
+++ b/app/index.html
@@ -80,6 +80,7 @@
         <script src=js/directives/ms-showplacedecimal.js></script>
         <script src=js/directives/ms-graph-horizontal.js></script>
         <script src=js/directives/ms-placevalue.js></script>
+        <script src=js/directives/ms-reduce-fraction.js></script>
         <script src=js/filters/add-wholes.js></script>
         <script src=js/filters/subtract-wholes.js></script>
         <script src=js/filters/multiply-wholes.js></script>
