start ms-multiply-decimals-power-ten.js directive

--- a/app/index.html
+++ b/app/index.html
@@ -47,6 +47,7 @@
         <script src=js/directives/ms-div-wholes.js></script>
         <script src=js/directives/ms-group.js></script>
         <script src=js/directives/ms-html.js></script>
+        <script src=js/directives/ms-multiply-decimals-power-ten.js></script>
         <script src=js/directives/ms-problem-pager.js></script>
         <script src=js/directives/ms-problem.js></script>
         <script src=js/directives/ms-panel-group.js></script>
