Add <ms-order-operations> wizard directive.
Also, imported Expression service from old system and cleaned up
course-data for 4.2.

--- a/app/index.html
+++ b/app/index.html
@@ -30,6 +30,7 @@
         <script src=js/services/course-data.js></script>
         <script src=js/services/feedback-data.js></script>
         <script src=js/services/directive-utils.js></script>
+        <script src=js/services/expression.js></script>
         <script src=js/services/number-utils.js></script>
         <script src=js/services/panel-group-data.js></script>
         <script src=js/services/parser.js></script>
@@ -68,6 +69,7 @@
         <script src=js/directives/ms-subtract-wholes.js></script>
         <script src=js/directives/ms-multiply-wholes.js></script>
         <script src=js/directives/ms-add-decimals.js></script>
+        <script src=js/directives/ms-order-operations.js></script>
         <script src=js/directives/ms-subtract-decimals.js></script>
         <script src=js/directives/ms-multiply-decimals.js></script>
         <script src=js/directives/ms-button.js></script>
