--- a/app/index.html
+++ b/app/index.html
@@ -57,6 +57,7 @@
         <script src=js/directives/ms-long-division.js></script>
         <script src=js/directives/ms-exponent.js></script>
         <script src=js/directives/ms-feedback.js></script>
+        <script src=js/directives/ms-flip.js></script>
         <script src=js/directives/ms-controls.js></script>
         <script src=js/directives/ms-expression.js></script>
         <script src=js/directives/ms-mixed-number.js></script>
