--- a/app/index.html
+++ b/app/index.html
@@ -61,6 +61,7 @@
         <script src=js/directives/ms-controls.js></script>
         <script src=js/directives/ms-expression.js></script>
         <script src=js/directives/ms-mixed-number.js></script>
+        <script src=js/directives/ms-multiply-fractions.js></script>
         <script src=js/directives/ms-fraction.js></script>
         <script src=js/directives/ms-event-label.js></script>
         <script src=js/directives/ms-string.js></script>
