--- a/app/index.html
+++ b/app/index.html
@@ -71,6 +71,7 @@
         <script src=js/directives/ms-multiply-wholes.js></script>
         <script src=js/directives/ms-add-decimals.js></script>
         <script src=js/directives/ms-order-operations.js></script>
+        <script src=js/directives/ms-percents-decimal-fraction.js></script>
         <script src=js/directives/ms-subtract-decimals.js></script>
         <script src=js/directives/ms-multiply-decimals.js></script>
         <script src=js/directives/ms-button.js></script>
@@ -90,6 +91,7 @@
         <script src=js/filters/add-decimals.js></script>
         <script src=js/filters/subtract-decimals.js></script>
         <script src=js/filters/multiply-decimals.js></script>
+        <script src=js/filters/percent-conversion.js></script>
         <script src=js/filters/checkbox2lbl.js></script>
  		<script src=js/filters/decimal-to-display-array.js></script>
         <script src=js/filters/digits.js></script>
