start ms-instruction

--- a/app/index.html
+++ b/app/index.html
@@ -65,6 +65,7 @@
         <script src=js/directives/ms-event-label.js></script>
         <script src=js/directives/ms-string.js></script>
         <script src=js/directives/ms-input.js></script>
+        <script src=js/directives/ms-instruction.js></script>
         <script src=js/directives/ms-select.js></script>
         <script src=js/directives/ms-add-wholes.js></script>
         <script src=js/directives/ms-subtract-wholes.js></script>
