--- a/app/index.html
+++ b/app/index.html
@@ -74,6 +74,7 @@
         <script src=js/directives/ms-order-operations.js></script>
         <script src=js/directives/ms-percents-decimal-fraction.js></script>
         <script src=js/directives/ms-subtract-decimals.js></script>
+        <script src=js/directives/ms-sign.js></script>
         <script src=js/directives/ms-multiply-decimals.js></script>
         <script src=js/directives/ms-button.js></script>
         <script src=js/directives/ms-row-group.js></script>
