--- a/app/index.html
+++ b/app/index.html
@@ -96,6 +96,7 @@
         <script src=js/filters/multiply-decimals.js></script>
         <script src=js/filters/percent-conversion.js></script>
         <script src=js/filters/checkbox2lbl.js></script>
+        <script src=js/filters/commas.js></script>
  		<script src=js/filters/decimal-to-display-array.js></script>
         <script src=js/filters/digits.js></script>
         <script src=js/filters/hide-last.js></script>
