--- a/app/index.html
+++ b/app/index.html
@@ -64,6 +64,7 @@
         <script src=js/directives/ms-fraction.js></script>
         <script src=js/directives/ms-event-label.js></script>
         <script src=js/directives/ms-string.js></script>
+        <script src=js/directives/ms-fraction-string.js></script>
         <script src=js/directives/ms-input.js></script>
         <script src=js/directives/ms-instruction.js></script>
         <script src=js/directives/ms-select.js></script>
