Add 6.1 "The Meaning of Fractions".

--- a/app/index.html
+++ b/app/index.html
@@ -63,6 +63,7 @@
         <script src=js/directives/ms-mixed-number.js></script>
         <script src=js/directives/ms-multiply-fractions.js></script>
         <script src=js/directives/ms-fraction.js></script>
+        <script src=js/directives/ms-fraction-boxes.js></script>
         <script src=js/directives/ms-event-label.js></script>
         <script src=js/directives/ms-string.js></script>
         <script src=js/directives/ms-fraction-string.js></script>
