Add <ms-previous> which updates a tag with the result of a function.
It replaces the first argument of its second argument with the result
of evaluating its first argument.

--- a/app/index.html
+++ b/app/index.html
@@ -71,6 +71,7 @@
         <script src=js/directives/ms-instruction.js></script>
         <script src=js/directives/ms-select.js></script>
         <script src=js/directives/ms-add-wholes.js></script>
+        <script src=js/directives/ms-previous.js></script>
         <script src=js/directives/ms-subtract-wholes.js></script>
         <script src=js/directives/ms-multiply-wholes.js></script>
         <script src=js/directives/ms-add-decimals.js></script>
