--- a/app/index.html
+++ b/app/index.html
@@ -40,6 +40,7 @@
         <script src=js/controllers/problem.js></script>
         <script src=js/controllers/feedback.js></script>
         <script src=js/directives/ms-breadcrumbs.js></script>
+        <script src=js/directives/ms-build-equivalent-fraction.js></script>
         <script src=js/directives/ms-button-group.js></script>
         <script src=js/directives/ms-checkbox.js></script>
         <script src=js/directives/ms-checkboxlabel.js></script>
