start percents 18.2 decimal to percent

--- a/app/index.html
+++ b/app/index.html
@@ -46,6 +46,7 @@
         <script src=js/directives/ms-checkboxlabel.js></script>
         <script src=js/directives/ms-css.js></script>
         <script src=js/directives/ms-comparewholesgraph.js></script>
+        <script src=js/directives/ms-decimal-to-percent.js></script>
         <script src=js/directives/ms-div-wholes.js></script>
         <script src=js/directives/ms-group.js></script>
         <script src=js/directives/ms-html.js></script>
