ms-add-zero.js, added attribute "ms-add-zero" to ms-input.js template- any input that begins with a decimal point is converted to begin with "0."
All decimal answers in course.data must begin with "0.", since input with or without leading zero will now return with leading zero.

--- a/app/index.html
+++ b/app/index.html
@@ -39,6 +39,7 @@
         <script src=js/controllers/problem-set-list.js></script>
         <script src=js/controllers/problem.js></script>
         <script src=js/controllers/feedback.js></script>
+        <script src=js/directives/ms-add-zero.js></script>
         <script src=js/directives/ms-breadcrumbs.js></script>
         <script src=js/directives/ms-build-equivalent-fraction.js></script>
         <script src=js/directives/ms-button-group.js></script>
