Start work on <ms-find-lcm>.

--- a/app/index.html
+++ b/app/index.html
@@ -70,6 +70,7 @@
         <script src=js/directives/ms-fraction-boxes.js></script>
         <script src=js/directives/ms-event-label.js></script>
         <script src=js/directives/ms-string.js></script>
+        <script src=js/directives/ms-find-lcm.js></script>
         <script src=js/directives/ms-fraction-string.js></script>
         <script src=js/directives/ms-input.js></script>
         <script src=js/directives/ms-instruction.js></script>
