--- a/app/index.html
+++ b/app/index.html
@@ -46,6 +46,7 @@
         <script src=js/directives/ms-checkbox.js></script>
         <script src=js/directives/ms-checkboxlabel.js></script>
         <script src=js/directives/ms-css.js></script>
+        <script src=js/directives/ms-col.js></script>
         <script src=js/directives/ms-comparewholesgraph.js></script>
         <script src=js/directives/ms--percent-convert-arrows.js></script>
         <script src=js/directives/ms-div-wholes.js></script>
