Break up course-data service.

--- a/app/index.html
+++ b/app/index.html
@@ -27,6 +27,56 @@
         <script src=lib/flot/jquery.flot.categories.js></script>
         <script src=js/mathSkills.js></script>
         <script src=js/services/mathSkills.services.js></script>
+        <script src=data/data1_1.js></script>
+        <script src=data/data1_2.js></script>
+        <script src=data/data1_3.js></script>
+        <script src=data/data1_4.js></script>
+        <script src=data/data1_5.js></script>
+        <script src=data/data2_1.js></script>
+        <script src=data/data2A_1.js></script>
+        <script src=data/data2A_2.js></script>
+        <script src=data/data3_1.js></script>
+        <script src=data/data3_2.js></script>
+        <script src=data/data4_1.js></script>
+        <script src=data/data4_2.js></script>
+        <script src=data/data5_1.js></script>
+        <script src=data/data5_2.js></script>
+        <script src=data/data5_3.js></script>
+        <script src=data/data5_4.js></script>
+        <script src=data/data6_1.js></script>
+        <script src=data/data6_2.js></script>
+        <script src=data/data6_3.js></script>
+        <script src=data/data6_4.js></script>
+        <script src=data/data7_1.js></script>
+        <script src=data/data7_2.js></script>
+        <script src=data/data7_3.js></script>
+        <script src=data/data8_1.js></script>
+        <script src=data/data8_2.js></script>
+        <script src=data/data8_3.js></script>
+        <script src=data/data8_4.js></script>
+        <script src=data/data9_1.js></script>
+        <script src=data/data9_2.js></script>
+        <script src=data/data9_3.js></script>
+        <script src=data/data9_4.js></script>
+        <script src=data/data10_1.js></script>
+        <script src=data/data10_2.js></script>
+        <script src=data/data10_3.js></script>
+        <script src=data/data12_1.js></script>
+        <script src=data/data12_2.js></script>
+        <script src=data/data12_3.js></script>
+        <script src=data/data13_1.js></script>
+        <script src=data/data13_2.js></script>
+        <script src=data/data14_1.js></script>
+        <script src=data/data14_2.js></script>
+        <script src=data/data15_1.js></script>
+        <script src=data/data15_2.js></script>
+        <script src=data/data16_4.js></script>
+        <script src=data/data18_1.js></script>
+        <script src=data/data18_2.js></script>
+        <script src=data/data18_3.js></script>
+        <script src=data/data19_1.js></script>
+        <script src=data/data19_2.js></script>
+        <script src=data/data19_3.js></script>
         <script src=js/services/course-data.js></script>
         <script src=js/services/feedback-data.js></script>
         <script src=js/services/directive-utils.js></script>
