--- a/app/index.html
+++ b/app/index.html
@@ -78,6 +78,7 @@
         <script src=data/data19_1.js></script>
         <script src=data/data19_2.js></script>
         <script src=data/data19_3.js></script>
+        <script src=data/data20_2.js></script>
         <script src=js/services/course-data.js></script>
         <script src=js/services/feedback-data.js></script>
         <script src=js/services/directive-utils.js></script>
