--- a/app/index.html
+++ b/app/index.html
@@ -61,6 +61,7 @@
         <script src=data/data10_1.js></script>
         <script src=data/data10_2.js></script>
         <script src=data/data10_3.js></script>
+		<script src=data/data10_4.js></script>
         <script src=data/data12_1.js></script>
         <script src=data/data12_2.js></script>
         <script src=data/data12_3.js></script>
