all problmData work

--- a/app/index.html
+++ b/app/index.html
@@ -85,6 +85,7 @@
         <script src=js/services/expression.js></script>
         <script src=js/services/number-utils.js></script>
         <script src=js/services/panel-group-data.js></script>
+        <script src=js/services/problem-data.js></script>
         <script src=js/services/parser.js></script>
         <script src=js/controllers/home.js></script>
         <script src=js/controllers/unit-list.js></script>
@@ -97,11 +98,13 @@
         <script src=js/directives/ms-button-group.js></script>
         <script src=js/directives/ms-checkbox.js></script>
         <script src=js/directives/ms-checkboxlabel.js></script>
+        <script src=js/directives/ms-choose.js></script>
         <script src=js/directives/ms-css.js></script>
         <script src=js/directives/ms-col.js></script>
         <script src=js/directives/ms-comparewholesgraph.js></script>
         <script src=js/directives/ms-percent-arrows.js></script>
         <script src=js/directives/ms-div-wholes.js></script>
+        <script src=js/directives/ms-data-set.js></script>
         <script src=js/directives/ms-group.js></script>
         <script src=js/directives/ms-html.js></script>
         <script src=js/directives/ms-multiply-decimals-power-ten.js></script>
@@ -113,7 +116,6 @@
         <script src=js/directives/ms-long-division.js></script>
         <script src=js/directives/ms-exponent.js></script>
         <script src=js/directives/ms-feedback.js></script>
-        <script src=js/directives/ms-flip.js></script>
         <script src=js/directives/ms-controls.js></script>
         <script src=js/directives/ms-expression.js></script>
         <script src=js/directives/ms-mixed-number.js></script>
@@ -149,6 +151,7 @@
         <script src=js/directives/ms-placevalue.js></script>
         <script src=js/directives/ms-reduce-fraction.js></script>
         <script src=js/directives/ms-strip-commas.js></script>
+        <script src=js/directives/ms-wb.js></script>
         <script src=js/filters/add-wholes.js></script>
         <script src=js/filters/subtract-wholes.js></script>
         <script src=js/filters/multiply-wholes.js></script>
