--- a/app/index.html
+++ b/app/index.html
@@ -99,6 +99,7 @@
         <script src=js/directives/ms-checkbox.js></script>
         <script src=js/directives/ms-checkboxlabel.js></script>
         <script src=js/directives/ms-choose.js></script>
+        <script src=js/directives/ms-commas-number.js></script>
         <script src=js/directives/ms-css.js></script>
         <script src=js/directives/ms-col.js></script>
         <script src=js/directives/ms-comparewholesgraph.js></script>
