Add <ms-cancel-fractions> to replace <ms-multiply-fractions> wizard.

--- a/app/index372.html
+++ b/app/index372.html
@@ -102,6 +102,7 @@
         <script src=js/directives/ms-breadcrumbs.js></script>
         <script src=js/directives/ms-build-equivalent-fraction.js></script>
         <script src=js/directives/ms-button-group.js></script>
+        <script src=js/directives/ms-cancel-fractions.js></script>
         <script src=js/directives/ms-checkbox.js></script>
         <script src=js/directives/ms-checkboxlabel.js></script>
         <script src=js/directives/ms-choose.js></script>
