--- a/app/index.html
+++ b/app/index.html
@@ -154,6 +154,7 @@
         <script src=js/directives/ms-reduce-fraction.js></script>
         <script src=js/directives/ms-strip-commas.js></script>
         <script src=js/directives/ms-wb.js></script>
+        <script src=js/directives/ms-cut.js></script>
         <script src=js/filters/add-wholes.js></script>
         <script src=js/filters/subtract-wholes.js></script>
         <script src=js/filters/multiply-wholes.js></script>
