Branched the CLSKLS 372 application

--- a/app/index372.html
+++ b/app/index372.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang=en ng-app=mathSkills>
     <head>
-        <!--This is the index page for the College Skills 371 Application -->
+        <!--This is the index page for the College Skills 372 Application -->
         <meta charset=utf-8>
         <meta name=viewport content="width=device-width, initial-scale=1.0">
-        <title>College Skills 371 | Santa Rosa Junior College</title>
+        <title>College Skills 372 | Santa Rosa Junior College</title>
         <link href='http://fonts.googleapis.com/css?family=Muli:300,400' rel='stylesheet' type='text/css'>
         <link rel=stylesheet href=css/bootstrap.min.css>
         <link rel=stylesheet href=css/app.css>
     </head>
-    <body class=clskls371>
+    <body class=clskls372>
         <header class=container>
             <div class="navbar navbar-inverse">
                 <div class=navbar-inner>
-                    <a class=brand href=#>College Skills 371</a>
+                    <a class=brand href=#>College Skills 372</a>
                     <p class="navbar-text pull-right">&copy; 2013 Santa Rosa Junior College</p>
                 </div>
             </div>
@@ -29,117 +29,12 @@
         <script src=lib/flot/jquery.flot.categories.js></script>
         <script src=js/mathSkills.js></script>
         <script src=js/services/mathSkills.services.js></script>
-<<<<<<< HEAD
-        <script src=data/data1_1.js></script>
-        <script src=data/data1_2.js></script>
-        <script src=data/data1_3.js></script>
-        <script src=data/data1_4.js></script>
-        <script src=data/data1_5.js></script>
-        <script src=data/data2_1.js></script>
-        <script src=data/data2A_1.js></script>
-        <script src=data/data2A_2.js></script>
-        <script src=data/data3_1.js></script>
-        <script src=data/data3_2.js></script>
-        <script src=data/data4_1.js></script>
-        <script src=data/data4_2.js></script>
-        <script src=data/data5_1.js></script>
-        <script src=data/data5_2.js></script>
-        <script src=data/data5_3.js></script>
-        <script src=data/data5_4.js></script>
-        <script src=data/data6_1.js></script>
-        <script src=data/data6_2.js></script>
-        <script src=data/data6_3.js></script>
-        <script src=data/data6_4.js></script>
-        <script src=data/data7_1.js></script>
-        <script src=data/data7_2.js></script>
-        <script src=data/data7_3.js></script>
-        <script src=data/data8_1.js></script>
-        <script src=data/data8_2.js></script>
-        <script src=data/data8_3.js></script>
-        <script src=data/data8_4.js></script>
-        <script src=data/data9_1.js></script>
-        <script src=data/data9_2.js></script>
-        <script src=data/data9_3.js></script>
-        <script src=data/data9_4.js></script>
-        <script src=data/data10_1.js></script>
-        <script src=data/data10_2.js></script>
-        <script src=data/data10_3.js></script>
-		<script src=data/data10_4.js></script>
-        <script src=data/data12_1.js></script>
-        <script src=data/data12_2.js></script>
-        <script src=data/data12_3.js></script>
-        <script src=data/data13_1.js></script>
-        <script src=data/data13_2.js></script>
-        <script src=data/data14_1.js></script>
-        <script src=data/data14_2.js></script>
-        <script src=data/data15_1.js></script>
-        <script src=data/data15_2.js></script>
-        <script src=data/data16_4.js></script>
-        <script src=data/data18_1.js></script>
-        <script src=data/data18_2.js></script>
-        <script src=data/data18_3.js></script>
-        <script src=data/data19_1.js></script>
-        <script src=data/data19_2.js></script>
-        <script src=data/data19_3.js></script>
-        <script src=data/data19_4.js></script>
-        <script src=data/data20_2.js></script>
-        <script src=data/data20_3.js></script>
-=======
-        <script src=data371/data1_1.js></script>
-        <script src=data371/data1_2.js></script>
-        <script src=data371/data1_3.js></script>
-        <script src=data371/data1_4.js></script>
-        <script src=data371/data1_5.js></script>
-        <script src=data371/data2_1.js></script>
-        <script src=data371/data2A_1.js></script>
-        <script src=data371/data2A_2.js></script>
-        <script src=data371/data3_1.js></script>
-        <script src=data371/data3_2.js></script>
-        <script src=data371/data4_1.js></script>
-        <script src=data371/data4_2.js></script>
-        <script src=data371/data5_1.js></script>
-        <script src=data371/data5_2.js></script>
-        <script src=data371/data5_3.js></script>
-        <script src=data371/data5_4.js></script>
-        <script src=data371/data6_1.js></script>
-        <script src=data371/data6_2.js></script>
-        <script src=data371/data6_3.js></script>
-        <script src=data371/data6_4.js></script>
-        <script src=data371/data7_1.js></script>
-        <script src=data371/data7_2.js></script>
-        <script src=data371/data7_3.js></script>
-        <script src=data371/data8_1.js></script>
-        <script src=data371/data8_2.js></script>
-        <script src=data371/data8_3.js></script>
-        <script src=data371/data8_4.js></script>
-        <script src=data371/data9_1.js></script>
-        <script src=data371/data9_2.js></script>
-        <script src=data371/data9_3.js></script>
-        <script src=data371/data9_4.js></script>
-        <script src=data371/data10_1.js></script>
-        <script src=data371/data10_2.js></script>
-        <script src=data371/data10_3.js></script>
-		<script src=data371/data10_4.js></script>
-        <script src=data371/data12_1.js></script>
-        <script src=data371/data12_2.js></script>
-        <script src=data371/data12_3.js></script>
-        <script src=data371/data13_1.js></script>
-        <script src=data371/data13_2.js></script>
-        <script src=data371/data14_1.js></script>
-        <script src=data371/data14_2.js></script>
-        <script src=data371/data15_1.js></script>
-        <script src=data371/data15_2.js></script>
-        <script src=data371/data16_4.js></script>
-        <script src=data371/data18_1.js></script>
-        <script src=data371/data18_2.js></script>
-        <script src=data371/data18_3.js></script>
-        <script src=data371/data19_1.js></script>
-        <script src=data371/data19_2.js></script>
-        <script src=data371/data19_3.js></script>
-        <script src=data371/data20_2.js></script>
-        <script src=data371/data20_3.js></script>
->>>>>>> Branched the CLSKLS 372 application
-        <script src=js/services/course-data.js></script>
+        <script src=data372/data_a_1.js></script>
+        <script src=data372/data_j_1.js></script>
+        <script src=data372/data_o_1_1.js></script>
+        <script src=data372/data_s_1.js></script>
+        <script src=data372/data_w_1.js></script>
+        <script src=js/services/course-data2.js></script>
         <script src=js/services/feedback-data.js></script>
         <script src=js/services/directive-utils.js></script>
         <script src=js/services/expression.js></script>
@@ -213,7 +108,6 @@
         <script src=js/directives/ms-reduce-fraction.js></script>
         <script src=js/directives/ms-strip-commas.js></script>
         <script src=js/directives/ms-wb.js></script>
-        <script src=js/directives/ms-cut.js></script>
         <script src=js/filters/add-wholes.js></script>
         <script src=js/filters/subtract-wholes.js></script>
         <script src=js/filters/multiply-wholes.js></script>
