More work on <ms-cancel-fractions>.

--- a/app/index372.html
+++ b/app/index372.html
@@ -86,6 +86,7 @@
         <script src=data372/data_dd_2.js></script>
         <script src=data372/data_ee_1.js></script>
         <script src=js/services/course-data2.js></script>
+        <script src=js/services/data-utils.js></script>
         <script src=js/services/feedback-data.js></script>
         <script src=js/services/directive-utils.js></script>
         <script src=js/services/expression.js></script>
