additional 372 menu items

--- a/app/index372.html
+++ b/app/index372.html
@@ -4,7 +4,7 @@
         <!--This is the index page for the College Skills 372 Application -->
         <meta charset=utf-8>
         <meta name=viewport content="width=device-width, initial-scale=1.0">
-        <title>College Skills 372 | Santa Rosa Junior College</title>
+        <title>College Skills 372 | Pre Algebra | Santa Rosa Junior College</title>
         <link href='http://fonts.googleapis.com/css?family=Muli:300,400' rel='stylesheet' type='text/css'>
         <link rel=stylesheet href=css/bootstrap.min.css>
         <link rel=stylesheet href=css/app.css>
@@ -30,6 +30,7 @@
         <script src=js/mathSkills.js></script>
         <script src=js/services/mathSkills.services.js></script>
         <script src=data372/data_a_1.js></script>
+        <script src=data372/data_b_1.js></script>
         <script src=data372/data_j_1.js></script>
         <script src=data372/data_o_1_1.js></script>
         <script src=data372/data_s_1.js></script>
