--- a/app/index371.html
+++ b/app/index371.html
@@ -4,7 +4,7 @@
         <!--This is the index page for the College Skills 371 Application -->
         <meta charset=utf-8>
         <meta name=viewport content="width=device-width, initial-scale=1.0">
-        <title>College Skills 371 | Santa Rosa Junior College</title>
+        <title>College Skills 371 | General Arithmetic | Santa Rosa Junior College</title>
         <link href='http://fonts.googleapis.com/css?family=Muli:300,400' rel='stylesheet' type='text/css'>
         <link rel=stylesheet href=css/bootstrap.min.css>
         <link rel=stylesheet href=css/app.css>
