--- a/app/index372.html
+++ b/app/index372.html
@@ -31,6 +31,13 @@
         <script src=js/services/mathSkills.services.js></script>
         <script src=data372/data_a_1.js></script>
         <script src=data372/data_b_1.js></script>
+        <script src=data372/data_c_1.js></script>
+        <script src=data372/data_c_2.js></script>
+        <script src=data372/data_c_1.js></script>
+        <script src=data372/data_e_1.js></script>
+        <script src=data372/data_e_2.js></script>
+        <script src=data372/data_e_3.js></script>
+        <script src=data372/data_e_4.js></script>
         <script src=data372/data_j_1.js></script>
         <script src=data372/data_o_1_1.js></script>
         <script src=data372/data_s_1.js></script>
